Fix horizontal alignment of table content
#172823262

--- a/resources/css/list.pcss
+++ b/resources/css/list.pcss
@@ -10,11 +10,12 @@
   font-weight: 300;
 }
 
-.ui-meta-grid {
+.ui-table {
   display: flex;
+  align-items: baseline;
 }
 
-.ui-meta-grid > *:first-child {
+.ui-table > *:first-child {
   min-width: 28%;
   max-width: 40%;
 }
