--- a/resources/css/video.pcss
+++ b/resources/css/video.pcss
@@ -41,7 +41,7 @@
   background: #262626;
   padding: 16px;
 
-  .ui-meta-grid:last-child .ui-list {
+  .ui-table:last-child .ui-list {
     padding-bottom: 0;
   }
 }
